--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: /assets/me circle.png
 
 description: Ambitious and high-achieving high school student who excels academically and demonstrates leadership through extra-curricular activities. 
 
-author:
+# author: linkedin
 
 show_downloads: true
 theme: jekyll-theme-minimal
