--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alexander Chai
-logo: /assets/me circle.png
+logo: /assets/AlexPicture.jpg
 
 description: Ambitious and high-achieving high school student who excels academically and demonstrates leadership through extra-curricular activities. 
 
