--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alexander Chai
-logo: /assets/AlexPicture.jpg
+logo: /assets/AlexPicture.png
 
 description: Ambitious and high-achieving high school student who excels academically and demonstrates leadership through extra-curricular activities. 
 
